--- a/main.scss
+++ b/main.scss
@@ -10,41 +10,58 @@ $bolder-font: 750;
 // colour palette
 $color-primary: #0f3152;
 $color-secondary: #1f82e6;
-$color-white: #fcfcfc;
-$color-offwhite: #ecf5d8;
+$color-offwhite: #fcfdf2;
+$color-white: #fdfdfd;
 $color-footer: #dfd368;
-
+//universal
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: $font-body;
     color: $color-primary;
+    background-color: $color-offwhite;
 }
-
+//nav bar
 link {
     text-decoration: none;
 }
 nav {
     height: 20vh;
-    background-color: $color-white;
-    padding: 0 10% 0 10%;
+    width: 100%;
+    background-color: $color-offwhite;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-grow: 4 1;
+    
+    .logo {
+        font-family: $logo-font;
+        font-weight: 500;
+        font-size: 10vmax;
+        color: $color-primary;
+        flex: auto;
+        text-align: left;
+        margin-left: 5%;
+    }
+    .nav-button {
+        font-weight: $bold-font;
+        font-size: large;
+        border: 0.15rem solid $color-primary;
+        padding: 2vmax 5vmax 2vmax 5vmax;
+        border-radius: 0.5rem;
+        flex: initial;
+        text-align: center;
+    }
 }
-
-.logo {
-    font-family: $logo-font;
-    font-weight: 500;
-    font-size: 3rem;
-    color: $color-primary;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
-.nav-button {
-    font-weight: $bold-font;
-    font-size: large;
-    border: 0.2rem solid $color-primary;
-    padding: 5% 10%;
-    border-radius: 0.5rem;
+h1 {
+    text-align: center;
+    color: $color-secondary;
+    font-weight: $bolder-font;
+    padding: 5% 0 10% 0;
 }
