--- a/main.css
+++ b/main.css
@@ -14,29 +14,28 @@ link {
 
 nav {
   height: 20vh;
-  width: 100%;
+  width: 90%;
   background-color: #fcfdf2;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 nav .logo {
   font-family: "Luckiest Guy", sans-serif;
   font-weight: 500;
-  font-size: 10vmax;
+  font-size: 4rem;
   color: #0f3152;
   flex: auto;
   text-align: left;
-  margin-left: 5%;
 }
 nav .nav-button {
   font-weight: 600;
-  font-size: large;
+  font-size: 2rem;
   border: 0.15rem solid #0f3152;
-  padding: 2vmax 5vmax 2vmax 5vmax;
+  padding: 2vw 5vw 2vw 5vw;
   border-radius: 0.5rem;
-  flex: initial;
+  flex: none;
   text-align: center;
 }
 
@@ -45,7 +44,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 0 5% 0 5%;
+  padding: 0 2% 0 2%;
 }
 
 h1 {
@@ -144,4 +143,6 @@ footer a {
   display: block;
   text-align: center;
   padding: 0.1rem 0 0.1rem 0;
+  background-color: #ebda44;
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
