made changes to large screen media queries

--- a/main.scss
+++ b/main.scss
@@ -208,11 +208,26 @@ footer {
 
 @media screen and (min-width: 900px) {
     nav {
-        justify-content: ;
+        justify-content: center;
+        width: 70%;
     }
-
-
-
-
+    .device-mockup-img{
+        width: 80%;
+        height: 50vh;
+        img {
+            width: 100%; 
+            height: 100%;           
+        }
+    }
+    body {
+        flex: auto;
+    }
+    header {
+        width: 70%;
+        h1 { 
+            font-size: 4rem;
+            padding: 0 0 2% 0;
+        }
+    }
 
 }
