--- a/main.css
+++ b/main.css
@@ -192,4 +192,28 @@ footer a {
   #annoyinglybigpeng {
     flex: auto;
   }
+}
+@media screen and (min-width: 900px) {
+  nav {
+    justify-content: center;
+    width: 70%;
+  }
+  .device-mockup-img {
+    width: 80%;
+    height: 50vh;
+  }
+  .device-mockup-img img {
+    width: 100%;
+    height: 100%;
+  }
+  body {
+    flex: auto;
+  }
+  header {
+    width: 70%;
+  }
+  header h1 {
+    font-size: 4rem;
+    padding: 0 0 2% 0;
+  }
 }/*# sourceMappingURL=main.css.map */
